--- a/src/styles/partials/_contact.sass
+++ b/src/styles/partials/_contact.sass
@@ -36,6 +36,8 @@ section.contact
                 &:focus
                     outline: none
                     border-bottom: 2px solid variables.$accent
+                &::placeholder
+                    color: var(--clr-placeholder)
         
         label
             font-family: variables.$secondary-font
